@@ -2,10 +2,11 @@
 #include <stdio.h>
 
 #include <tls.h>
-#include "tls-macros.h"
-
 
 #ifdef USE_TLS
+# include "tls-macros.h"
+
+
 /* Two common 'int' variables in TLS.  */
 COMMON_INT_DEF(foo);
 COMMON_INT_DEF(bar);
