@@ -1,5 +1,15 @@
 2002-02-13  Ulrich Drepper  <drepper@redhat.com>
 
+	* elf/tst-tls1.c: Move #include "tls-macros.h" instead #ifdef USE_TLS.
+	* elf/tst-tls2.c: Likewise.
+	* elf/tst-tls3.c: Likewise.
+
+2002-02-13  Jakub Jelinek  <jakub@redhat.com>
+
+	* elf/dl-close.c (free_slotinfo): Only define if TLS supported.
+
+2002-02-13  Ulrich Drepper  <drepper@redhat.com>
+
 	* elf/dl-open.c (dl_open_worker): Only bump the generation counter
 	if this is really necessary.
 
